--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun Sep 06 11:29:07 CST 2015
+#Tue Mar 29 16:23:02 CST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://txtest.shijie2.com/downloads/gradle-2.6-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.12-bin.zip
