--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,12 @@ apply plugin: 'jacoco'
 apply plugin: 'maven'
 apply plugin: 'signing'
 
-//sourceCompatibility = 1.7
 group = 'com.github.jarod'
 archivesBaseName = 'exocet'
-version = '0.1.2'
+version = '0.1.3'
 
 jacoco {
-    toolVersion = "0.7.+"
+    toolVersion = "0.7.9"
 }
 
 repositories {
