--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,34 @@
+buildscript {
+    ext {
+        junitPlatformVersion = '1.0.+'
+        junitJupiterVersion = '5.0.+'
+    }
+
+    repositories {
+        maven {
+            url repoPublicUrl
+        }
+        jcenter()
+    }
+
+    dependencies {
+        classpath "org.junit.platform:junit-platform-gradle-plugin:${junitPlatformVersion}"
+    }
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'jacoco'
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 group = 'com.github.jarod'
 archivesBaseName = 'exocet'
 version = '0.1.3'
 
 jacoco {
-    toolVersion = "0.7.9"
+    toolVersion = "0.8.0"
 }
 
 repositories {
@@ -17,9 +36,14 @@ repositories {
 }
 
 dependencies {
-   testCompile(
-     "junit:junit:4.+",
-   )
+    testCompile(
+            "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}",
+            "org.mockito:mockito-core:2.+"
+    )
+    testRuntime(
+            "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}",
+            "org.junit.platform:junit-platform-launcher:${junitPlatformVersion}",
+    )
 }
 
 task javadocJar(type: Jar) {
